[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbbasic-deploy"
version = "0.1.0"
description = "Simple SSH deployment tool for dbbasic-web apps to Ubuntu servers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DBBasic", email = "noreply@dbbasic.com"}
]
dependencies = [
    "paramiko>=3.0.0",
    "click>=8.0.0",
]

[project.scripts]
dbbasic-deploy = "dbbasic_deploy.cli:main"

[project.urls]
Homepage = "https://github.com/askrobots/dbbasic-deploy"
Repository = "https://github.com/askrobots/dbbasic-deploy"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbbasic_deploy*"]
